# apoptosis

./: .gitignore  README.md  pyproject.toml
bf/: pyproject.toml
bf/scripts/: convert_frame_dataset.py  infer_resnet.py  plot_resnet_scores.py  train_resnet.py
bf/src/apoptosis_bf/: __init__.py  frame_dataset.py  resnet_pipeline.py
bf/tests/: test_frame_dataset.py  test_resnet_pipeline.py
stain/: pyproject.toml
stain/src/apoptosis_stain/: __init__.py  __main__.py  detect_spikes.py  nd2_roi_timeseries.py  plot_traces.py
stain/tests/: test_nd2_roi_timeseries.py
