[project]
name = "apoptosis-bf"
version = "0.1.0"
description = "Brightfield morphology analysis package placeholder for apoptosis experiments."
requires-python = ">=3.12,<3.13"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "tifffile>=2025.3.30",
  "torch>=2.6",
  "torchvision>=0.21",
]

[project.scripts]
apoptosis-bf-train-resnet = "apoptosis_bf.resnet_pipeline:train_main"
apoptosis-bf-infer-resnet = "apoptosis_bf.resnet_pipeline:infer_main"
apoptosis-bf-plot-resnet-scores = "apoptosis_bf.resnet_pipeline:plot_main"

[build-system]
requires = ["hatchling>=1.27", "pathspec<0.13"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apoptosis_bf"]

[tool.uv]
package = true
