[project]
name = "apoptosis-stain"
version = "0.1.0"
description = "ND2-native stain-channel ROI fluorescence timeseries extraction for apoptosis experiments."
requires-python = ">=3.12,<3.13"
dependencies = [
  "matplotlib>=3.8",
  "markdown-it-py<4",
  "nd2>=0.10",
  "numpy>=1.26",
  "pandas>=2.2.3,<2.3",
  "typer>=0.12",
]

[project.scripts]
apoptosis-detect-spikes = "apoptosis_stain.detect_spikes:main"
apoptosis-plot-traces = "apoptosis_stain.plot_traces:main"
apoptosis-roi-timeseries = "apoptosis_stain.nd2_roi_timeseries:main"

[build-system]
requires = ["hatchling>=1.27", "pathspec<0.13"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apoptosis_stain"]

[tool.uv]
package = true
